# mlb

./: .codecov.yml  .coderabbit.yaml  .coverage  .env.example  .gitignore  .pr_agent.toml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  MCP_SETUP.md  MILESTONES.md  OBJECTIVES.md  README  README.md  ROADMAP.md  SECURITY.md  alembic.ini  bootstrap_mcp.sh  mcp.config.json  mlb.py  opencode.json  pyproject.toml  pytest.ini  renovate.json  sonar-project.properties
.gemini/: config.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  pr-labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.yml  config.yml  data-source.yml  feature-request.yml  feature_request.yml  modeling-task.yml
.github/workflows/: ai-review.yml  aider_ci_autofix.yml  auto_issue_creation.yml  ci.yml  codebase_review.yml  codecov.yml  codeql-analysis.yml  codeql.yml  db-health.yml  gemini_autofix.yml  gemini_pr_review.yml  harden-runner.yml  issue-labeler.yml  issue-triage.yml  issue_triage.yml  labeler.yml  lint.yml  nightly.yml  openrouter_review.yml  pr-labeler.yml  pr-title.yml  python-ci.yml  release.yml  security.yml  snyk.yml  sonarcloud.yml  sql-ci.yml  tests.yml
.kilo/: kilo.json  kilo.jsonc
.kilo/plans/: 1779666073297-tidy-pixel.md  1779719805731-nimble-forest.md  1779748750021-mighty-engine.md  1779748750021-mlb-finalization.md  alembic-setup.md
.refact/buddy/: runtime_queue.jsonl  state.json
.refact/imports/: competitors.json
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_010_extensions.py  003_020_schemas.py  004_030_meta.py  005_040_raw.py  006_050_staging.py  007_060_core.py  008_070_ml_ops.py  009_080_functions.py  010_090_constraints_indexes.py
baseball/: cli.py  db.py  export.py  settings.py
baseball/ingestion/: __init__.py  base.py  bref.py  engine.py  enrich_player_identity.py  espn.py  fangraphs.py  lahman.py  loaders.py  mlbam.py  odds.py  orchestrator.py  retrosheet.py  statcast.py
baseball/vector/: __init__.py  document_store.py  embeddings.py
docs/: DATA_INGESTION.md  README  architecture.md  audit_checklist.md  data-dictionary.md  external-tools.md  gemini-ingestion-plan.md  gemini-ingestion-plan2.md  github-workflow.md  ingestion.md  issue-creation-process.md  modeling.md  operations.md  player-xref.md  player_identity_design.md  project-summary.md  project_summary.md  pybaseball-data-mapping.md  python-app-layer.md  retrosheet-reference.md  security.md  testing-strategy.md
plans/: 2026-05-18-define-python-project-structure-v1.md  2026-05-26-ingestion-vector-db-plan.md  refactor-blueprint.md
prompts/: fix-env-injection.md  gemini-analyst-prompt.md
scripts/: bootstrap_db.sh  enrich_player_identity.py  generate_alembic_migrations.py
sql/: README  README.md
sql/010_extensions/: 001_extensions.sql  002_optional_extensions.sql
sql/020_schemas/: 001_schema.sql  002_auth_schema.sql  003_roles_and_grants.sql  004_api_schema.sql
sql/030_meta/: 001_source_registry.sql  002_ingest_audit.sql  002_source_registry_fk.sql
sql/040_raw/: 001_raw_retrosheet.sql  001_raw_retrosheet_migration_v2.sql  002_raw_chadwick.sql  003_raw_statcast.sql  003_raw_statcast_alter.sql  003_raw_statcast_migration_v2.sql  004_raw_mlbapi.sql  004_raw_mlbapi_migration_v2.sql  005_raw_lahman.sql  006_raw_web_sources.sql  006_raw_web_sources_migration_v2.sql  007_raw_vector.sql  008_raw_statcast_advanced.sql  009_raw_mlbapi_team_stats.sql
sql/050_staging/: 001_identity_bridge.sql  002_game_bridge.sql  002_identity_trigger_and_indexes.sql  003_game_identity.sql  004_identity_trigger_and_indexes.sql  005_chadwick_register_import.sql  005_game_identity_bridge.sql  006_source_conformance.sql  007_mlbapi_extraction.sql
sql/060_core/: 001_core_entities.sql  002_core_gameplay.sql  003_core_relationships.sql  004_core_pitch_alter.sql  005_serving_views.sql  006_identity_resolved_views.sql
sql/070_ml_ops/: 001_ml_registry.sql  002_feature_store.sql  003_predictions_backtests_liveops.sql  004_workspace_security.sql  005_workspace_rls.sql  006_marts_materialized_views.sql  007_ingestion_orchestration.sql  008_api_service_contracts.sql  009_source_ingestion_specs.sql  010_mv_statcast_player_summary.sql  011_mart_views.sql  012_mv_spray_zone_analytics.sql
sql/080_functions/: 001_meta_functions.sql  002_retrosheet_chadwick_functions.sql  003_statcast_mlbapi_functions.sql  003a_ingestion_identity_resolution.sql  004_lahman_web_functions.sql  005_staging_functions.sql  006_core_functions.sql  007_ml_ops_functions.sql  008_auth_security_functions.sql  009_mart_refresh_functions.sql  010_ingestion_ops_functions.sql  (+5 more)
(+47 files in other folders)
