[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "baseball"
version = "0.1.0"
description = "Python application layer for the MLB analytics PostgreSQL platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Blaine Winslow" }
]
keywords = ["mlb", "baseball", "analytics", "postgresql", "mlops"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "typer[all]>=0.12",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "psycopg2-binary>=2.9",
    "python-mlb-statsapi>=0.4",
    "pybaseball>=2.2",
    "haystack-ai>=2.0",
    "qdrant-client>=1.7",
    "pgvector>=0.2",
    "openai>=1.30",
    "pyarrow>=15.0",
    "s3fs>=2024.3",
    "aiohttp>=3.9",
    "pyretrosheet>=0.0.10",
    "pychadwick>=0.6.1",
    "psycopg2>=2.9.12",
    "psycopg-pool>=3.3.1",
    "psycopg>=3.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=7.1.0",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100",
    "ruff>=0.15.14",
    "pylint>=4.0.5",
    "sqlfluff>=4.2.1",
    "psycopg2>=2.9.12",
    "pyfyre>=0.6.9",
    "pyr>=0.4",
    "pyright>=1.1.409",
    "mlbgame>=2.5.0",
    "alembic>=1.15.0",
    "pandas>=2.0",
    "s3fs>=2024.3",
]

[project.urls]
"Homepage" = "https://github.com/cbwinslow/mlb"
"Source" = "https://github.com/cbwinslow/mlb"

[project.scripts]
baseball = "baseball.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["baseball"]
